--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-loader": "^6.2.0",
     "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
+    "html-webpack-skip-assets-plugin": "^1.0.2",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
     "postcss-loader": "^6.1.1",
