--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "file-loader": "^6.2.0",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1"
   }
 }
