--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
+    "dotenv-webpack": "^7.0.3",
     "file-loader": "^6.2.0",
     "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
@@ -40,7 +41,6 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "axios": "^0.23.0",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1"
   }
