自定义了 Cookie 工具，目前项目为纯原生实现，没有任何运行时依赖。

--- a/package.json
+++ b/package.json
@@ -40,7 +40,5 @@
     "webpack-dev-server": "^4.2.1",
     "webpack-merge": "^5.8.0"
   },
-  "dependencies": {
-    "js-cookie": "^3.0.1"
-  }
+  "dependencies": {}
 }
