--- a/prod.env
+++ b/prod.env
@@ -1,2 +1,2 @@
-STATIC_SERVER=http://project.sumixer.com:8091
-API_SERVER=http://project.sumixer.com:8090
+STATIC_SERVER=http://project.sumixer.com
+API_SERVER=http://project.sumixer.com:8088
