--- a/prod.env
+++ b/prod.env
@@ -1,2 +1,2 @@
-STATIC_SERVER=http://project.sumixer.com
-API_SERVER=http://project.sumixer.com:8088
+STATIC_SERVER=https://project.sumixer.com
+API_SERVER=https://project.sumixer.com:8081
