--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0",
+    "colors": "^1.4.0",
     "compression-webpack-plugin": "^9.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
@@ -31,6 +32,7 @@
     "postcss-preset-env": "^6.7.0",
     "purgecss-webpack-plugin": "^4.0.3",
     "react-dev-utils": "^11.0.4",
+    "readline-sync": "^1.4.10",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.2.4",
